# mq-tutorial

./: .env.example  .gitignore  Makefile  README.md  alert_service.py  config.py  consumers.py  customs_service.py  cv_service.py  definitions.json  docker-compose.kafka.yml  docker-compose.yml  inventory_service.py  models.py  nlp_service.py  payment_service.py  pyproject.toml  requirements.txt  run_demo.py  setup_exchanges.py  topology.py
docs/: kafka-demo.md
kafka_demo/: common.py  consumer.py  producer.py
mq/: consumer.py  error_policy.py  idempotency.py  publisher.py
services/: alert_service.py  audit_service.py  customs_service.py  cv_service.py  inventory_service.py  nlp_service.py  notification_service.py  payment_service.py
